--- a/app/templates/eventFrameAttributes/eventFrameAttributes.html
+++ b/app/templates/eventFrameAttributes/eventFrameAttributes.html
@@ -25,7 +25,7 @@ Event Frame Attributes
     <h1>Event Frame Attributes <small></small></h1>
 </div>
 <div>
-    <table id = "eventFrameAttributesTable" class = "table" style = "width:100%">
+    <table id = "eventFrameAttributesTable" class = "table" style = "display:none">
         <thead>
             <tr>
                 <th>Event Frame Template</th>
@@ -83,23 +83,6 @@ Event Frame Attributes
     <script>
         $(document).ready(function()
         {
-            $("#inputTagFilter").on("keyup change", function()
-            {
-                var filter = $(this).val()
-                var regex = new RegExp(filter, "gi")
-                eventFrameAttributesTable.$("option:not(:selected)").each(function()
-                {
-                    if ($(this).text().match(regex) || $(this).text() == "")
-                    {
-                        $(this).show()
-                    }
-                    else
-                    {
-                        $(this).hide()
-                    }
-                })
-            })
-
             var eventFrameAttributesTable = $("#eventFrameAttributesTable").DataTable
             ({
                 "order":
@@ -121,16 +104,9 @@ Event Frame Attributes
                 "fixedHeader": true
             })
 
-            // Enter key call save all.
-            $(document).keypress(function(event)
-            {
-                if (event.which == 13)
-                {
-                    $("#buttonAttributesSaveAll").focus()
-                }
-            })
+            $("#eventFrameAttributesTable").attr("style", "width:100%")
 
-            $("#buttonAttributesSaveAll").click(function()
+            $("#buttonAttributesSaveAll").on("click", function()
             {
                 var rows = []
                 // Loop through the select values.
@@ -159,6 +135,32 @@ Event Frame Attributes
                 {
                     $("#divFlashedMessages").append("<div class = \"alert alert-danger\"><button type = \"button\" class = \"close\" " +
                         "data-dismiss = \"alert\">&times;</button>The attempt to update one or more event frame attributes failed.</div>")                        
+                })
+            })
+
+            // Enter key call save all.
+            $(document).keypress(function(event)
+            {
+                if (event.which == 13)
+                {
+                    $("#buttonAttributesSaveAll").focus()
+                }
+            })
+
+            $("#inputTagFilter").on("keyup change", function()
+            {
+                var filter = $(this).val()
+                var regex = new RegExp(filter, "gi")
+                eventFrameAttributesTable.$("option:not(:selected)").each(function()
+                {
+                    if ($(this).text().match(regex) || $(this).text() == "")
+                    {
+                        $(this).show()
+                    }
+                    else
+                    {
+                        $(this).hide()
+                    }
                 })
             })
         })
