--- a/app/templates/eventFrames/addEdit.html
+++ b/app/templates/eventFrames/addEdit.html
@@ -39,7 +39,7 @@
                 }
             {% endif %}
 
-            $("#buttonSave").click(function()
+            $("#buttonSave").on("click", function()
             {
                 setUtcTimestamps()
             })
